--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ nav a {
     font-size: 12px;
     cursor: pointer;
 }
+#navbarNav {
+    display: flex;
+    justify-content: flex-end;
+}
 
 #promo{
   height: 1000px;
@@ -75,11 +79,15 @@ nav a {
 }
 
 .view_more{
-    color: #4f4d6a;
+    border-radius: 20%;
+    width: 100px;
+   background-color:#4f4d6a;
 }
 
 .view_more_text{
     font-size: 12px;
+    color: white;
+    text-decoration: none;
     font-family:Georgia bold italic ;
 }
 
@@ -151,8 +159,18 @@ nav a {
 
 footer{
     background-color: #505050;
+    height: 350px;
 }
 
-footer h1,h2,h3,h4,h5 ,h6{
-    font-family: Georgia italic ; 
+footer h1,h2,h3,h4,h5 ,h6,p{
+    font-family: Georgia italic ;   
+    color:white;
+}
+
+#footer_div{
+    margin-top: 5%;
+    top: 50%;
+    width: 500px;
+    margin-left: 16%;
+    justify-content: center;
 }
